# vanity

./: Cargo.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: main.rs
