[package]
name = "vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
# Untuk Elliptic Curve (ECDSA secp256k1)
k256 = { version = "0.13", features = ["ecdsa"] }
# Untuk Hashing (Keccak256)
sha3 = "0.10"
# Untuk Random number generator
rand = "0.8"
# Untuk Hex encoding
hex = "0.4"
# Untuk JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Untuk Argumen CLI (pengganti flag)
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
